fixing header icons issues on mobile

--- a/src/components/header/_styles.scss
+++ b/src/components/header/_styles.scss
@@ -36,7 +36,6 @@
     
             svg, .user {
                 margin-left: 1.1rem;
-                width: 80%;
     
                 @media screen and (min-width: vars.$tablet) {
                     width: 2rem;
